tests/good/typing/043-val-alpha-fun.clap
** 'a -> 'a
val x = (fun (x) => x)
