tests/bad/interpret/007-app-char.clap
val f = 'a'
val x = f 1

